--- a/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
@@ -20,7 +20,8 @@
       <button id="play" disabled>Play</button>
       <button id="original">Original</button>
       <button id="reset">Reset</button>
-      <button id="export-mp4">Export MP4</button>
+      <button id="export-pngs">Export PNGs</button>
+<button id="export-mp4">Export MP4</button>
     </div>
   </header>
 
