--- a/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
@@ -20,12 +20,16 @@
       <button id="play" disabled>Play</button>
       <button id="original">Original</button>
       <button id="reset">Reset</button>
+
+      <!-- NEW: view mode toggles -->
+      <button id="view-fit" class="toggle on">Fit</button>
+      <button id="view-1x" class="toggle">1:1</button>
+
       <button id="save-png">Save PNG</button>
       <button id="export-pngs">Export PNGs (.tar)</button>
       <button id="export-mp4">Export MP4</button>
     </div>
   </header>
-
   <main id="app">
     <aside class="panel">
       <section>
