really trying to fix mp4

--- a/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
+++ b/pages/cat.Optics & Design/Disposable-Camera-Filter/index.html
@@ -102,6 +102,7 @@
   <video id="vid" playsinline muted style="display:none"></video>
 
 
-  <script type="module" src="app.js"></script>
+  <script src="https://unpkg.com/@ffmpeg/ffmpeg@0.12.6/dist/ffmpeg.min.js"></script>
+<script type="module" src="app.js"></script>
 </body>
 </html>
