--- a/pages/cat.Optics & Design/gif-commander/index.html
+++ b/pages/cat.Optics & Design/gif-commander/index.html
@@ -368,9 +368,15 @@
 
     async function makeGIF() {
       if (!bitmaps.length) { alert('Load images and generate WebM first for frame data.'); return; }
+      if (typeof GIF === 'undefined') { alert('GIF library failed to load. Check console and refresh.'); return; }
       try {
-        status("Generating high-quality GIF… (client-side, max fidelity)");
+        status("Loading GIF worker… (CORS-safe)");
         prog.value = 0;
+        const workerResponse = await fetch('https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js');
+        if (!workerResponse.ok) throw new Error('Worker fetch failed');
+        const workerBlob = await workerResponse.blob();
+        const workerURL = URL.createObjectURL(workerBlob);
+
         const fps = parseInt(fpsEl.value || "3", 10);
         let duration = parseFloat(durationEl.value);
         if (!duration) duration = bitmaps.length / fps;
@@ -378,14 +384,15 @@
         const loop = loopEl.checked;
         // Use last canvas size for consistency
         const outW = lastCanvasW || (parseInt(wEl.value,10) || naturalW || 480);
-        const outH = lastCanvasH || (parseInt(hEl.value,10) || naturalH || -1); // Fallback
+        const outH = lastCanvasH || (parseInt(hEl.value,10) || naturalH || 240);
 
+        status("Generating high-quality GIF… (client-side, max fidelity)");
         const gif = new GIF({
           workers: 4,
           quality: 1, // Highest quality
           width: outW,
           height: outH,
-          workerScript: 'https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js',
+          workerScript: workerURL,
           background: '#000000',
           repeat: loop ? 0 : 0 // gif.js repeat: 0=infinite
         });
@@ -409,14 +416,15 @@
           const a = document.createElement('a');
           a.href = url; a.download = 'out.gif'; a.click();
           URL.revokeObjectURL(url);
-          status(`High-Q GIF done. ${(blob.size/1024/1024).toFixed(2)} MB (VP9 rec for source?)`);
+          URL.revokeObjectURL(workerURL); // Cleanup
+          status(`High-Q GIF done. ${(blob.size/1024/1024).toFixed(2)} MB (quality=1 for sharpness)`);
         });
 
         gif.on('progress', p => { prog.value = Math.round(p * 100); });
         gif.render();
       } catch (err) {
         console.error(err);
-        status("GIF Error: " + (err && err.message ? err.message : err) + " (Try fewer frames)");
+        status("GIF Error: " + (err && err.message ? err.message : err) + " (Try fewer frames or refresh)");
       }
     }
 
